--- a/SimpleAudioPlayer/AndroidManifest.xml
+++ b/SimpleAudioPlayer/AndroidManifest.xml
@@ -15,7 +15,8 @@
         android:theme="@style/AppTheme_withoutBar" >
         <activity
             android:name="mdev.master_j.simpleaudioplayer.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:noHistory="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
