--- a/SimpleAudioPlayer/AndroidManifest.xml
+++ b/SimpleAudioPlayer/AndroidManifest.xml
@@ -11,12 +11,12 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme_withoutBar" >
+        android:label="@string/app_name" >
         <activity
             android:name="mdev.master_j.simpleaudioplayer.SplashActivity"
             android:label="@string/app_name"
-            android:noHistory="true" >
+            android:noHistory="true"
+            android:theme="@style/AppTheme_withoutBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,7 +25,8 @@
         </activity>
         <activity
             android:name="mdev.master_j.simpleaudioplayer.MainActivity"
-            android:label="@string/title_activity_main" >
+            android:label="@string/title_activity_main"
+            android:theme="@style/AppTheme_withBar" >
         </activity>
     </application>
 
